<resources>
    <string name="app_name">Client Manager</string>

    <!-- Dialog -->
    <string name="please_wait">Please wait</string>

    <!-- Sign in -->
    <string name="welcome_msg">Welcome to the Client Manager app</string>
    <string name="sign_in_msg">Please sign in with your google account</string>

    <!-- Sign out, disconnect account -->
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_disconnect_account">Disconnect account</string>

    <string name="main_activity">Main Activity</string>
    <string name="label_add_appointment">add Appointment</string>
    <string name="appointment">Appointment</string>
    <string name="appointment_client_name">Client</string>
    <string name="appointment_phone_number">Phone</string>
    <string name="appointment_service">Service</string>
    <string name="date_label">Date:</string>
    <string name="appointment_info">Info</string>
    <string name="save">Save</string>
    <string name="fill_the_form">Fill the form</string>
    <string name="field_is_required">Field is required</string>
    <string name="appointment_saved">Appointment added</string>
    <string name="saving_failed">Saving failed</string>
    <string name="appointment_with_title">Appointment with title</string>
    <string name="and_with_client">and with client</string>
    <string name="already_exists">already exists</string>
    <string name="cannot_save_appointment">Cannot save an appointment</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="appointment_updated">Appointment updated</string>
    <string name="updating_failed">Updating failed</string>
    <string name="appointment_deleted">Appointment deleted</string>
    <string name="deleting_failed">Deleting failed</string>
    <string name="user_saving_failed">User saving failed</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="do_not_have_account">Don\'t have account yet?</string>
    <string name="sign_up_link">Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in_link">Sign In</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="email_registered">Email already registered</string>
    <string name="unable_save_user">Unable save user</string>
    <string name="user_login_failed">User login failed</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="paid">Paid</string>
    <string name="done">Done</string>
    <string name="services">Services:</string>
    <string name="tools">Tools:</string>
    <string name="user_equal_null">Users is null</string>
    <string name="hint_zero">0</string>
    <string name="currency">lei</string>
    <string name="verify_internet">Please, verify internet connection</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="no_internet_access">No internet access available</string>
    <string name="grant_call_permission">In order to make calls, please grant call permission</string>
    <string name="view_navigation_open">Navigation open</string>
    <string name="view_navigation_close">Navigation close</string>
    <string name="logout">Logout</string>
    <string name="order_by_date">Order by Date</string>
    <string name="order_by_client">Order by Client</string>
    <string name="archived_order_by_date">Archived order by Date</string>
    <string name="archived_order_by_client">Archived order by Client</string>
    <string name="profile_image">Profile image</string>
    <string name="background_image">Background image</string>
    <string name="address">Address</string>

</resources>
