<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orangeBackground"
    android:orientation="vertical"
    tools:context=".activity.SignInActivity">

    <RelativeLayout
        android:id="@+id/logo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/sign_in_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_logo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo_layout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/sign_up_email_et"
            style="@style/signInField"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="100"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/sign_up_password_et"
            style="@style/signInField"
            android:layout_below="@+id/sign_up_email_et"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/password"
            android:inputType="textVisiblePassword"
            android:maxLength="100"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/sign_up_confirm_password_et"
            style="@style/signInField"
            android:layout_below="@+id/sign_up_password_et"
            android:hint="@string/confirmPassword"
            android:inputType="textVisiblePassword"
            android:maxLength="100"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
           style="@style/signInField"
            android:layout_below="@+id/sign_up_confirm_password_et"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/sign_up"
            android:fontFamily="sans-serif-light"
            android:background="@color/orangeBackground"
            android:shadowColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sign_up_sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sign_up_sign_in_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/already_have_account"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sign_in_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/sign_up_sign_in_question"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in_link"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</RelativeLayout>